Make compatible with new App Chooser

--- a/panorama/res/values/strings.xml
+++ b/panorama/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Turtlebot Panorama</string>
+    <string name="stop_app">Kill</string>
+    <string name="default_robot">turtlebot</string>
+	<string name="default_app">turtlebot_core_apps/panorama</string>
 </resources>
